<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>network_bridge</name>
  <version>1.0.2</version>
  <description>Allows for arbitrary network links (UDP, TCP, etc) to bridge ROS2 messages</description>
  <maintainer email="brow1633@purdue.edu">Ethan Brown</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <depend>rclcpp</depend>
  <depend>libboost-system-dev</depend>
  <depend>libzstd-dev</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
